<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.worldexplorationaction.android.ui.home.HomeFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.worldexplorationaction.android.ui.home.HomeFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="com.worldexplorationaction.android.ui.dashboard.DashboardFragment"
        android:label="@string/title_leaderboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.worldexplorationaction.android.ui.notifications.NotificationsFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_notifications" />
</navigation>