<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_leaderboard_background"
    tools:context=".ui.leaderboard.LeaderboardFragment">

    <TextView
        android:id="@+id/title_leaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/ubuntu"
        android:letterSpacing="0.03"
        android:text="@string/title_leaderboard"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/leaderboard_content_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_leaderboard">

        <Button
            android:id="@+id/leaderboard_global_button"
            style="@style/LeaderboardButton.Active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard_global_button_title" />

        <Button
            android:id="@+id/leaderboard_friends_button"
            style="@style/LeaderboardButton.InActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard_friends_button_title" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/leaderboard_content_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"
        android:outlineAmbientShadowColor="@color/black"
        app:cardCornerRadius="18dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.worldexplorationaction.android.ui.userlist.UserListView
            android:id="@+id/leaderboard_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_leaderboard_content_background"
            android:clipToPadding="false"
            android:contentDescription="@string/leaderboard_content_description"
            android:elevation="10dp"
            android:outlineAmbientShadowColor="@color/black"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>